tests/import/faulty_from_circular.sy
from _from_circular use num2 as num1

start :: fn do
     num1 <=> 200
end

// error: sylt_common::Error::CompileError {..}
